@@ -4,7 +4,8 @@ Changelog
 0.13.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Allow runcall, runeval to also use set context value
+  [meowser]
 
 
 0.13.2 (2020-03-03)
